Bugfix: menu behind equalizer

--- a/player/masterPlayer/stylesheets/src/masterPlayer.sass
+++ b/player/masterPlayer/stylesheets/src/masterPlayer.sass
@@ -99,8 +99,6 @@ span[class|="ico"]
 	0%
 		width: 0%
 
-	
-
 +keyframes(minimise)
 	0%
 		+transform(scale3d(1,1,1))
@@ -329,6 +327,7 @@ body
 	position: absolute
 	right: 0
 	top: 75px
+	z-index: 5
 	
 	&:hover
 		opacity: 1
